k3s-manifests/ingress/nginx-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: query-forge-nginx-ingress
  namespace: query-forge-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - query-forge-dev.ualtarh.com
        - api.ualtarh.com
        - auth.ualtarh.com
        - agent.ualtarh.com
        - scraping.ualtarh.com
        - adminer.ualtarh.com
        - kibana.ualtarh.com
      secretName: query-forge-tls
  rules:
    # Frontend
    - host: query-forge-dev.ualtarh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 4444

    # API Backend
    - host: api.ualtarh.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nestjs-service
                port:
                  number: 3000

    # Auth Service
    - host: auth.ualtarh.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4000

    # Agent IA Service
    - host: agent.ualtarh.com
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: agent-ai-service
                port:
                  number: 8088

    # Scraping Service
    - host: scraping.ualtarh.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: scraping-service
                port:
                  number: 3001

    # Adminer
    - host: adminer.ualtarh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer-service
                port:
                  number: 8080

    # Kibana
    - host: kibana.ualtarh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-service
                port:
                  number: 5601
