k3s-manifests/ingress/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik.ualtarh.com
      secretName: traefik-dashboard-tls
  rules:
    - host: traefik.ualtarh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-service-dashboard
                port:
                  number: 9000
